# HomelessProgram

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mama.cmake
Headers/: Process.hpp  Threads.hpp  ThreadsInfo.hpp
Sources/: ThreadsInfo.cpp
